--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,20 @@ h1 {
   border: solid 1px #CCC;
   overflow-y: auto;
 }
+.instructions {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 20px);
+  padding-bottom: 20px;
+}
+.instructions h1 {
+  padding: 5px;
+}
 .modal p {
   width: calc(100% - 20px);
   padding: 0px 10px;
-  font-size: 12px;
+  font-size: 14px;
   text-align: left;
 }
 .modal p img {
@@ -89,10 +99,10 @@ h1 {
   font-size: 16px;
 }
 .modal .header-bar {
-  /* display: block; */
   text-align: right;
   height: 30px;
   line-height: 30px;
+  font-size: 14px;
   padding-top: 10px;
   text-decoration: none;
 }
@@ -101,6 +111,15 @@ h1 {
   text-align: left;
   margin: 0;
   padding: 0;
+}
+.modal .how-to-link {
+  text-align: center; 
+  color: #3c70e0;
+  cursor: pointer;
+}
+.modal .how-to-link span img {
+  position: relative;
+  vertical-align: middle;
 }
 .underline {
   text-decoration: underline;
@@ -113,7 +132,7 @@ form label {
   display: block;
   margin: 5px auto;
   text-align: left;
-  font-size: 10px;
+  font-size: 12px;
 }
 form label input[type="text"] {
   display: block;
